--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <div class="text">I'm Mridula Swami and I'm a <span class="typing-2"></span></div>
                     <p>Hello world , I am currently a B.tech student (CSE). I am a Machine learning enthusiastic who loves artificial intelligence
                         and it's applications and I  love to explore and gain knowledge about different ML aspects. Other than this I am also doing work on Full stack development where I learnt HTML ,CSS 
-                and going with javascript , node.js , react ,git etc and I am also practising Data structures and algorithms with
-            Python and want to continue it with C++ too. I have also done some internships and currently I am a beta 
+                and going with javascript , node.js  ,git etc and I am also practising Data structures and algorithms with
+            C++. I have also done some internships and currently I am a beta 
             Microsoft Learn Student Ambassador too. I have certain hobbies like reading books, travelling, playing outdoor games
         and dancing which is my favourite one. So this was something about myself, give a watch to my LinkedIn profile. </p>
                     <a href="https://www.linkedin.com/in/mridula-swami-7343a81b0">Visit my Linkedin Profile</a>
@@ -117,7 +117,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Coming on my skills , So I am working with python on DSA and want to explore it as main tool
+                    <p>Coming on my skills , So I am working with C++ on DSA and want to explore python as main tool
                         for data science and ML. I also learnt C, frontend languages, MYSQL and I am practising and learning  skills in DSA and development both,
                         So I am looking forward to collab and contribute, in experience I am currently Beta MLSA learning about MS Azure cloud and Other
                         microsoft services.
@@ -133,21 +133,21 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MS AZURE</span>
+                            <span>Machine learning techniques</span>
                             <span>40%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>C </span>
+                            <span>C++ </span>
                             <span>60%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MYSQL</span>
+                            <span>SQL</span>
                             <span>70%</span>
                         </div>
                         <div class="line html"></div>
@@ -155,7 +155,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>Python</span>
-                            <span>60%</span>
+                            <span>40%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
